namespace TicketManagementSystem.Domain.Enums;

public enum TicketPriority
{
    Low,
    Medium,
    High,
    Critical
}