namespace TicketManagementSystem.Domain.Enums;

public enum TicketStatus
{
    Open, 
    InProgress, 
    Waiting, 
    Closed, 
    Rejected
}